--- a/style.css
+++ b/style.css
@@ -15,17 +15,21 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 70px;
+    margin-top: 50px;
+}
+
+h1{
+    text-align: center;
 }
 
 div{
-    width: 70%;
+    width: 75%;
     background-color: #6c7b91;
     max-width: 300px;
     color: #DDDDDD;
     max-height: 500px;
-    margin-top: 50px;
     padding: 30px;
+    margin-top: 20px;
     box-shadow: 10px 10px 0px -2px rgba(0,0,0,1);
     -webkit-box-shadow: 10px 10px 0px -2px rgba(0,0,0,1);
     -moz-box-shadow: 10px 10px 0px -2px rgba(0,0,0,1);
